@@ -5,6 +5,7 @@ purple (05/11/05)
 + Added some session-related opcodes to worldopcodes.xml
 + Fixed opcodes for alt exp and hooked altExpUpdateStruct so alt exp updating
 	maps properly
++ Made is so OP_ManaChange can be 0 size. Bards have this a lot.
 
 dophaZ (04/17/05)
 -----------------------
